# wobl

./: .gitattributes  .gitignore  CMakePresets.json  pyproject.toml  requirements.txt  wobl.py
data/: ddsm_filter_pitch.rrd  ddsm_scaled_cmd.rrd  ddsm_test.rrd  recording.rrd  test_ddsm_acceleration.rrd  wheel_test.rrd
firmware/: platformio.ini
firmware/include/: cobs.hpp  debug.hpp  imu.hpp  imu_task.hpp  servo.hpp  servo_task.hpp  shared_state.hpp  wheel.hpp  wheel_task.hpp
firmware/src/: as5600_test.cpp  imu.cpp  imu_task.cpp  main.cpp  servo.cpp  servo_task.cpp  wheel.cpp  wheel_task.cpp  wheel_test.cpp
host/: .gitignore  pyproject.toml  requirements.txt
host/data/: ddsm_test.rrd
host/messages/: generate.py
host/mjcf/: plane_world.xml  robot.xml
host/mjcf/stl/: Back Battery Cap.stl  Servo Leg Housing Assembly.stl  Servo Leg Housing Servo.stl
host/scripts/: lqr_test.py  plot_record_velocity.py
host/woblcpp/: CMakeLists.txt  CMakePresets.json  woblcpp.cpp
host/woblcpp/include/wobl/real/: imu_driver.hpp
host/woblcpp/scripts/: ddsm_ping.cpp  ddsm_test.cpp  ddsm_torque_test.cpp  imu_node.cpp  servo_node.cpp
host/woblcpp/src/wobl/real/: ddsm315_driver.cpp  imu_driver.cpp
host/woblpy/cli/: bringup.py  hz.py
host/woblpy/common/: node.py
host/woblpy/control/: controller.py  controller_node.py  lqr.py  stand_controller_node.py  wheel_eval_controller.py
host/woblpy/sim/: application.py  robot.py  sim_node.py
messages/: generate.py  imu.proto  joint.proto  messages.proto
mjcf/: robot.xml
mjcf/stl/: Back.stl  Battery.stl  Leg Link Assembly.stl  Lower Leg.stl  Lower Servo.stl  Mounting Plate.stl  Shell.stl  Upper Leg Asembly.stl  Wheel.stl
scripts/: bringup.py  find_lqr_gains.py  plot_record_velocity.py  test.py  test_publisher.py
woblcpp/: CMakeLists.txt  CMakePresets.json  README.md
woblcpp/include/wobl/: node.hpp
woblcpp/include/wobl/messages/: imu.pb.cc  imu.pb.h  joint.pb.cc  joint.pb.h
woblcpp/include/wobl/real/: ddsm315_driver.hpp  imu_driver.hpp  servo_driver.hpp
woblcpp/scripts/: CMakeLists.txt  ddsm_ping.cpp  ddsm_set_id.cpp  ddsm_torque_test.cpp  imu_calibrate.cpp  imu_node.cpp  motor_node.cpp  servo_midpoint.cpp  servo_node.cpp  servo_ping.cpp  servo_set_id.cpp  test_publisher.cpp  test_subscriber.cpp
woblcpp/src/wobl/: node.cpp
woblcpp/src/wobl/real/: ddsm315_driver.cpp  imu_driver.cpp  servo_driver.cpp
woblpy/cli/: bringup.py  record.py
woblpy/common/: node.py
woblpy/control/: controller.py  controller_node.py  diff_drive_kinematics.py  kalman_filter.py  linear_filter.py  lqr.py  stand_controller_node.py  wheel_eval_controller.py
woblpy/messages/: imu_pb2.py  imu_pb2.pyi  joint_pb2.py  joint_pb2.pyi
woblpy/sim/: robot.py  sim_node.py
