[project]
name = "wobl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "control>=0.10.2",
    "dm-control==1.0.31",
    "eclipse-zenoh>=1.6.2",
    "mujoco==3.3.5",
    "numpy>=2.3.5",
    "protobuf>=6.32.1",
    "rerun-sdk>=0.27.2",
    "simple-pid>=2.0.1",
]
